Fixing Overflow on Mob

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -137,4 +137,12 @@ footer p {
      margin: auto;
    }
 
+   #Showcase h1 {
+     font-size: 35px;
+   }
+
+   #Showcase p {
+     font-size: 20px
+     overflow: hidden;
+   }
  }
